2003-08-30  Eli Zaretskii  <eliz@elta.co.il>

	* vc-hooks.el (vc-make-version-backup): Fix the change made on
	2003-07-26: msdos-long-file-names is a function, not a variable.

2003-08-29  Richard M. Stallman  <rms@gnu.org>

	* mail/sendmail.el (sendmail-sync-aliases, mail-setup): 
	Do nothing with mail-personal-alias-file if it is nil.

	* mail/mailabbrev.el (mail-abbrevs-sync-aliases):
	Do nothing if mail-personal-alias-file is nil.

	* term.el (term-exec-1): Bind coding-system-for-read.

	* dired.el (dired-mouse-find-file-other-window): 
	Use dired-view-command-alist here, as in dired-view-file.
	(dired-view-command-alist): Use %s to substitute file name.
	Handle .ps_pages, .eps, .jpg, .gif, .png.

2003-08-29  Paul Pogonyshev  <pogonyshev@gmx.net>

	* info.el (Info-mode-map): Bind S-tab and <backtab> to
	`Info-prev-reference', instead of M-tab.

2003-08-29  Martin Stjernholm  <mast@lysator.liu.se>

	* simple.el (blink-matching-open): Work correctly on chars that
	are designated as parens through the syntax-table text property.

2003-08-29  Thierry Emery <thierry.emery@club-internet.fr>  (tiny change)

	* kinsoku.el (kinsoku-longer, kinsoku-shorter): Do not choose a
	line break position in the middle of a non-kinsoku (e.g. latin)
	word, making it skip until either a space or a character with
	category "|".
	(kinsoku-longer): Test for end of buffer.

2003-08-28  Eli Zaretskii  <eliz@elta.co.il>

	* mail/rmail.el (rmail-convert-to-babyl-format): Detect
	quoted-printable- and base64-encoded messages and decode them
	automatically.  Set the message's encoding from the charset=
	header, if any.  Decode base64-encoded messages in Mail format as
	well.

2003-08-26  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* mail/smtpmail.el Fix previous change:
	(smtpmail-send-queued-mail): Set smtpmail-mail-address before
	calling smtpmail-via-smtp.
	(smtpmail-via-smtp): Add fall-back values for envelope-from.

2003-08-26  John Paul Wallington  <jpw@gnu.org>
